# rocpp

./: Cargo.toml  LICENSE  README.md
ocpp-client/: Cargo.toml  README.md
ocpp-client/examples/v16/simulator/: README.md  package-lock.json  package.json
ocpp-client/examples/v16/simulator/src/: App.css  App.jsx  index.css
ocpp-client/examples/v16/simulator/src-tauri/: .gitignore  Cargo.toml  config.json  tauri.conf.json
ocpp-client/examples/v16/simulator/src-tauri/src/: main.rs
ocpp-client/examples/v16/simulator/src-tauri/src/interface/: database.rs  diagnostics.rs  firmware.rs  ftp.rs  hardware.rs  log.rs  mod.rs  secc.rs  timers.rs  ui.rs  websocket.rs  ws.rs
ocpp-client/examples/v16/simulator/src/components/: ChargerStatus.jsx  ConnectorStatus.jsx  LogPanel.jsx
ocpp-client/examples/v16/simulator/src/hooks/: useTauriEvents.js
ocpp-client/examples/v16/simulator/src/services/: tauriService.js
ocpp-client/examples/v16/simulator/src/styles/: ChargerStatus.css  ConnectorStatus.css  LogPanel.css
ocpp-client/src/: interface.rs  lib.rs
ocpp-client/src/v16/: cp.rs  interface.rs  mod.rs
ocpp-client/src/v16/cp/: async.rs  config.rs  core.rs  mod.rs
ocpp-client/src/v16/drivers/: database.rs  diagnostics.rs  firmware.rs  ftp.rs  hardware_interface.rs  mod.rs  peripheral_input.rs  shutdown.rs  timers.rs  websocket.rs
ocpp-client/src/v16/events/: diagnostics.rs  firmware.rs  init.rs  mod.rs  secc.rs  timeouts.rs  websocket.rs
ocpp-client/src/v16/events/ocpp/request/: cancel_reservation.rs  change_availability.rs  change_configuration.rs  clear_cache.rs  clear_charging_profile.rs  data_transfer.rs  get_composite_schedule.rs  get_configuration.rs  get_diagnostics.rs  get_local_list_version.rs  mod.rs  remote_start_transaction.rs  remote_stop_transaction.rs  reserve_now.rs  reset.rs  send_local_list.rs  set_charging_profile.rs  trigger_message.rs  unlock_connector.rs  update_firmware.rs
ocpp-client/src/v16/events/ocpp/response/: authorize.rs  boot_notification.rs  data_transfer.rs  diagnostics_status_notification.rs  firmware_status_notification.rs  heartbeat.rs  meter_values.rs  mod.rs  start_transaction.rs  status_notification.rs  stop_transaction.rs
ocpp-client/src/v16/interfaces/: backend.rs  facade.rs  interface.rs  mod.rs
ocpp-client/src/v16/services/: database.rs  diagnostics.rs  firmware.rs  hardware.rs  mod.rs  secc.rs  stop.rs  timeout.rs  websocket.rs
ocpp-client/src/v16/state_machine/: actions.rs  auth.rs  boot.rs  call.rs  clock.rs  config.rs  connector.rs  core.rs  diagnostics.rs  firmware.rs  heartbeat.rs  meter.rs  mod.rs  operations.rs  reservation.rs  rng.rs  transaction.rs
ocpp-client/tests/: conformance_runner.rs
ocpp-client/tests/conformance/: mod.rs  tc_001_cs.rs  tc_002_cs.rs  tc_003_cs.rs  tc_004_1_cs.rs  tc_004_2_cs.rs  tc_005_2_cs.rs  tc_005_3_cs.rs  tc_007_cs.rs  tc_008_cs.rs  tc_010_cs.rs  tc_011_1_cs.rs  tc_011_2_cs.rs  tc_012_cs.rs  tc_013_cs.rs  tc_014_cs.rs  tc_015_cs.rs  tc_016_cs.rs  tc_017_2_cs.rs  tc_018_2_cs.rs  tc_019_cs.rs  tc_021_cs.rs  tc_023_cs.rs  tc_026_cs.rs  tc_027_cs.rs  tc_028_cs.rs  tc_031_cs.rs  tc_032_2_cs.rs  tc_034_cs.rs  tc_036_cs.rs  tc_037_1_cs.rs  tc_037_2_cs.rs  tc_037_3_cs.rs  tc_038_cs.rs  tc_039_cs.rs  tc_040_1_cs.rs  tc_040_2_cs.rs  tc_041_cs.rs  tc_042_1_cs.rs  tc_042_2_cs.rs  (+26 more)
ocpp-client/tests/harness/: database.rs  diagnostics.rs  event.rs  firmware.rs  hardware.rs  harness.rs  mod.rs  secc.rs  stop.rs  timeout.rs  timers.rs  ws.rs
ocpp-client/tests/state/: any_order.rs  combined.rs  connection.rs  either.rs  measure.rs  mod.rs  operation.rs  optional.rs  reusable_states.rs  secc.rs  step.rs  timestamp.rs  ws_recv.rs
ocpp-core/: Cargo.toml  README.md
ocpp-core/src/: lib.rs
ocpp-core/src/format/: error.rs  frame.rs  message.rs  mod.rs
ocpp-core/src/v16/: mod.rs  protocol_error.rs
ocpp-core/src/v16/messages/: authorize.rs  boot_notification.rs  cancel_reservation.rs  change_availability.rs  change_configuration.rs  clear_cache.rs  clear_charging_profile.rs  data_transfer.rs  diagnostics_status_notification.rs  firmware_status_notification.rs  get_composite_schedule.rs  get_configuration.rs  get_diagnostics.rs  get_local_list_version.rs  heart_beat.rs  meter_values.rs  remote_start_transaction.rs  remote_stop_transaction.rs  reserve_now.rs  reset.rs  send_local_list.rs  set_charging_profile.rs  start_transaction.rs  status_notification.rs  stop_transaction.rs  trigger_message.rs  unlock_connector.rs  update_firmware.rs
ocpp-core/src/v16/types/: authorization_data.rs  authorization_status.rs  availability_status.rs  availability_type.rs  cancel_reservation_status.rs  charge_point_error_code.rs  charge_point_status.rs  charging_profile.rs  charging_profile_kind_type.rs  charging_profile_purpose_type.rs  charging_profile_status.rs  charging_rate_unit_type.rs  charging_schedule.rs  charging_schedule_period.rs  clear_cache_status.rs  clear_charging_profile_status.rs  configuration_status.rs  data_transfer_status.rs  diagnostics_status.rs  firmware_status.rs  get_composite_schedule_status.rs  id_tag_info.rs  key_value.rs  location.rs  measurand.rs  message_trigger.rs  meter_value.rs  mod.rs  phase.rs  reading_context.rs  reason.rs  recurrency_kind_type.rs  registration_status.rs  remote_start_stop_status.rs  reservation_status.rs  reset_status.rs  reset_type.rs  sampled_value.rs  trigger_message_status.rs  unit_of_measure.rs  (+4 more)
ocpp-server/: Cargo.toml  README.md
