[package]
name = "ocpp_client"
version = "0.1.0"
edition = "2021"

[dependencies]
ocpp_core = { path = "../ocpp-core" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
async-trait = "0.1.88"
rand = { version = "0.9.1", default-features = false, features = ["small_rng"] }
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
log = "0.4"

[features]
default = []
async = []


[dev-dependencies]
ocpp_client = { path = ".", features = ["async"] }
serde_json = "1.0.140"
flume = "0.11.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.15"
chrono = { version = "0.4.41", default-features = false, features = ["serde", "now"] }
env_logger = "0.10"
anyhow = "1.0.98"
rand = "0.9.1"
uuid = { version = "1.17.0", features = ["v4"] }
