[package]
name = "rocpp_client"
version = "1.0.0"
edition = "2021"
description = "OCPP client in Rust (no_std)"
readme = "README.md"
license = "MIT"
repository = "https://github.com/choudhary463/rocpp"

[dependencies]
rocpp_core = { path = "../ocpp-core", version = "1.0.0" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
rand = { version = "0.9.1", default-features = false, features = ["small_rng"] }
log = "0.4"

[features]
default = []


[dev-dependencies]
serde_json = "1.0.140"
flume = "0.11.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.15"
chrono = { version = "0.4.41", default-features = false, features = ["serde", "now"] }
env_logger = "0.10"
anyhow = "1.0.98"
rand = "0.9.1"
uuid = { version = "1.17.0", features = ["v4"] }
uptime_lib = "0.3.1"
futures = "0.3.31"
