[package]
name = "ocpp_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }