[package]
name = "rocpp_core"
version = "1.0.0"
edition = "2021"
description = "OCPP core in Rust (no_std)"
readme = "README.md"
repository = "https://github.com/choudhary463/rocpp"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }