[package]
name = "simulator"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
ocpp_client = { path = "../../../..", features = ["flume_peripheral", "tokio_timer", "tokio_shutdown", "ftp_transfer", "tokio_ws"] }
ocpp_core = { path = "../../../../../ocpp-core" }
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flume = "0.11.1"
tokio = { version = "1", features = ["full"] }
sled = "0.34.7"
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
async-trait = "0.1.88"
async_ftp = "=6.0.0"
regex = "1.11.1"
anyhow = "1.0"
tokio-util = "0.7.11"
tokio-tungstenite = "0.26.2"
futures-util = "0.3"
log = "0.4"
url = "2.5.4"
uptime_lib = "0.3.1"
rand = "0.9.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
