[workspace]

[package]
name = "charger_simulator_ocpp_v16"
version = "1.0.0"
description = "Charger Simulator OCPP 1.6"
authors = ["Anmol Choudhary"]
edition = "2021"
readme = "README.md"
license = "MIT"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
rocpp_client = { path = "../../../.." }
rocpp_core = { path = "../../../../../ocpp-core" }
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flume = "0.11.1"
tokio = { version = "1", features = ["full"] }
sled = "0.34.7"
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
async-trait = "0.1.88"
async_ftp = "=6.0.0"
regex = "1.11.1"
anyhow = "1.0"
tokio-util = "0.7.11"
tokio-tungstenite = "0.26.2"
futures-util = "0.3"
log = "0.4"
url = "2.5.4"
uptime_lib = "0.3.1"
rand = "0.9.1"
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
